--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+.browserslistrc
+.editorconfig
+.eslintrc.js
+postcss.config.js
 vue.config.js
 
 # Log files
